<resources>
    <string name="app_name" translatable="false">PokerChips</string>
    <string name="totalbet">TOTAL BET</string>
    <string name="currenttotalbet">CURRENT TOTAL BET</string>
    <string name="currentindividualbet">CURRENT INDIVIDUAL BET</string>
    <string name="bigblind" translatable="false">BIG BLIND</string>
    <string name="yes">yes</string>
    <string name="confirmation">Confirmation</string>
    <string name="name">Name</string>
    <string name="chips">Chips</string>
    <string name="dealer" translatable="false">D</string>
    <string name="big" translatable="false">B</string>
    <string name="small" translatable="false">S</string>
    <string name="in" translatable="false">O</string>
    <string name="bet_rising_time">BET RISING TIME</string>
    <string name="your_chips">YOUR CHIPS</string>
    <string name="check">CHECK</string>
    <string name="call">CALL</string>
    <string name="bet">BET</string>
    <string name="fold">FOLD</string>
    <string name="Error">Error</string>
    <string name="Name">Name</string>
    <string name="Code">Code</string>
    <string name="players">Number of players</string>
    <string name="initial_chips">Initial chips</string>
    <string name="Frecuency">Frecuency to rise</string>
    <string name="Rise_value">Rise value</string>
    <string name="NewGame">New Game</string>
    <string name="JoinGame">Join a Game</string>
    <string name="QuickGame">Quick Game</string>
    <string name="CustomGame">Custom Game</string>
    <string name="WriteName">Write your name</string>
    <string name="NumberPlayers">Nº Players</string>
    <string name="next">Next</string>
    <string name="GenerateCode">Generate Code</string>
    <string name="code">CODE</string>
    <string name="start">Start</string>
    <string name="writeYourName">Write your name</string>
    <string name="numPlayers">Nº Players</string>
    <string name="numChipsPlayer">Nº Chips by player</string>
    <string name="iniBigValue">Initial value of BIG BLIND</string>
    <string name="freqRiseBig">BIG BLIND rise frequency</string>
    <string name="ValueRiseBig">BIG BLIND rise value</string>
    <string name="minutes" translatable="false">min</string>
    <string name="nextAcction">Next</string>
    <string name="wrtName">Write your name</string>
    <string name="EnterGame">Enter a game</string>
    <string name="writeCode">Write the code to join the game:</string>
    <string name="wait">Please wait ...</string>
    <string name="allin">All IN</string>
    <string name="turn" translatable="false">TURN</string>
    <string name="selectWinner">You must select the winner</string>
    <string name="betFewChips">You are trying to bet very few chips, press CHECK/FOLD or bet some more chips</string>
    <string name="enoughtChips">You do not have enought chips, please FOLD</string>
    <string name="betAllChips">Are you sure you want to bet all your chips?</string>
    <string name="betXChips">Are you sure you want to bet %1$s chips?</string>
    <string name="betXChipsMore">Are you sure you want to bet %1$s chips more?</string>
    <string name="currentBetXChips">You current bet is %1$s chips</string>
    <string name="preflop" translatable="false">PREFLOP</string>
    <string name="flop" translatable="false">FLOP</string>
    <string name="river" translatable="false">RIVER</string>
    <string name="winner" translatable="false">WINNER</string>
    <string name="whoIsWinner">The turn of bets is over it\'s time to know who is the winner</string>
    <string name="chooseWinner">Player %1$s choose the winner</string>
    <string name="differentsWinners">You are choosing differents players, please try it again and select the same winner</string>
    <string name="enterName">Please enter your name</string>
    <string name="second">Please write the name of the second player</string>
    <string name="third">Please write the name of the third player</string>
    <string name="fourth">Please write the name of the fourth player</string>
    <string name="fifth">Please write the name of the fifth player</string>
    <string name="sixth">Please write the name of the sixth player</string>
    <string name="seventh">Please write the name of the seventh player</string>
    <string name="eighth">Please write the name of the eighth player</string>
    <string name="nineth">Please write the name of the nineth player</string>
    <string name="tenth">Please write the name of the tenth player</string>
    <string name="enterCode">Please enter code</string>
    <string name="codeIncorrect">The code is not correct</string>
    <string name="enterPlayers">Please enter number of players</string>
    <string name="maximPlayers">Maximum number of players is 10</string>
    <string name="enterBigRiseValue">Please enter Big Blind rise value</string>
    <string name="enterFreqRiseBig">Please enter frequency to rise the Big Blind value</string>
    <string name="enterBig">Please enter Big Blind value</string>
    <string name="enterInitialChips">Please enter initial chips</string>
    <string name="scanQR">Scan QR</string>
    <string name="PlayerWonChips">Player %1$s won %2$s chips</string>
    <string name="BigChangeMessage">Big blind value increase</string>
    <string name="adapter_txt_call" translatable="false">Call</string>
    <string name="adapter_txt_allin" translatable="false">ALL IN</string>
    <string name="adapter_txt_turn" translatable="false">Turn</string>
    <string name="minPlayers">Minimum number of players is 2</string>
    <string name="ONLINE" translatable="false">ONLINE</string>
    <string name="SecondPlayer">Write second player\'s name</string>
    <string name="ThirdPlayer">Write third player\'s name</string>
    <string name="FourthPlayer">Write fourth player\'s name</string>
    <string name="FifthPlayer">Write fifth player\'s name</string>
    <string name="SixthPlayer">Write sixth player\'s name</string>
    <string name="SeventhPlayer">Write seventh player\'s name</string>
    <string name="EightPlayer">Write eighth player\'s name</string>
    <string name="NinethPlayer">Write nineth player\'s name</string>
    <string name="TenthPlayer">Write tenth player\'s name</string>
    <string name="PLAY">PLAY</string>
    <string name="Rule">The list of players will be in the order specified below</string>

</resources>
