<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <EditText
        android:id="@+id/edit_second_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_fifth_player"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_third_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThirdPlayer"
        android:textSize="14sp"
        android:layout_below="@+id/edit_second_player"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_second_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/SecondPlayer"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_fourth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_seventh_player"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_eighth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_eighth_player"
        android:layout_alignLeft="@+id/txt_eighth_player"
        android:layout_alignStart="@+id/txt_eighth_player" />

    <TextView
        android:id="@+id/txt_tenth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TenthPlayer"
        android:textSize="14sp"
        android:layout_below="@+id/edit_nineth_player"
        android:layout_alignLeft="@+id/edit_nineth_player"
        android:layout_alignStart="@+id/edit_nineth_player"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txt_nineth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NinethPlayer"
        android:textSize="14sp"
        android:layout_above="@+id/edit_nineth_player"
        android:layout_alignLeft="@+id/edit_eighth_player"
        android:layout_alignStart="@+id/edit_eighth_player" />

    <EditText
        android:id="@+id/edit_tenth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_tenth_player"
        android:layout_alignLeft="@+id/txt_tenth_player"
        android:layout_alignStart="@+id/txt_tenth_player" />

    <EditText
        android:id="@+id/edit_nineth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_sixth_player"
        android:layout_alignLeft="@+id/txt_nineth_player"
        android:layout_alignStart="@+id/txt_nineth_player" />

    <TextView
        android:id="@+id/txt_eighth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EightPlayer"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/txt_fifth_player"
        android:layout_alignBottom="@+id/txt_fifth_player"
        android:layout_toRightOf="@+id/txt_seventh_player"
        android:layout_toEndOf="@+id/txt_seventh_player"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/edit_seventh_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_seventh_player"
        android:layout_alignStart="@+id/txt_seventh_player"
        android:layout_below="@+id/txt_seventh_player"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_fifth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FifthPlayer"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/txt_second_player"
        android:layout_alignBottom="@+id/txt_second_player"
        android:layout_alignRight="@+id/edit_fifth_player"
        android:layout_alignEnd="@+id/edit_fifth_player" />

    <EditText
        android:id="@+id/edit_sixth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_sixth_player"
        android:layout_alignLeft="@+id/txt_fifth_player"
        android:layout_alignStart="@+id/txt_fifth_player" />

    <TextView
        android:id="@+id/txt_seventh_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SeventhPlayer"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/txt_tenth_player"
        android:layout_alignBottom="@+id/txt_tenth_player"
        android:layout_alignLeft="@+id/edit_fifth_player"
        android:layout_alignStart="@+id/edit_fifth_player" />

    <TextView
        android:id="@+id/txt_sixth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SixthPlayer"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/txt_third_player"
        android:layout_alignBottom="@+id/txt_third_player"
        android:layout_alignLeft="@+id/edit_sixth_player"
        android:layout_alignStart="@+id/edit_sixth_player" />

    <EditText
        android:id="@+id/edit_fifth_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/txt_fifth_player"
        android:layout_toRightOf="@+id/txt_second_player"
        android:layout_toEndOf="@+id/txt_second_player"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <EditText
        android:id="@+id/edit_third_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_below="@+id/txt_third_player"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_seventh_player"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/PLAY" />

    <TextView
        android:id="@+id/txt_fourth_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_fourth_player"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/FourthPlayer" />

    <TextView
        android:id="@+id/txt_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="3dp"
        android:text="@string/Rule"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp" />

</RelativeLayout>